Login design done

--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -1,62 +1,30 @@
-/*
- * @NOTE: Prepend a `~` to css file paths that are in your node_modules
- *        See https://github.com/webpack-contrib/sass-loader#imports
- */
-body {
-  position: relative;
-  color: white;
-  height: 100vh;
-  background: linear-gradient(
-    200.96deg,
-    #fedc2a -29.09%,
-    #dd5789 51.77%,
-    #7a2c9e 129.35%
-  );
-  font-family: sans-serif;
-  overflow-y: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
+body{
+  margin: 0px;
+  font-family:'Rubik', sans-serif;
+  font-weight: 300;
 }
 
-button {
-  background-color: white;
-  padding: 10px 20px;
-  border-radius: 10px;
-  border: none;
-  appearance: none;
-  font-size: 1.3rem;
-  box-shadow: 0px 8px 28px -6px rgba(24, 39, 75, 0.12),
-    0px 18px 88px -4px rgba(24, 39, 75, 0.14);
-  transition: all ease-in 0.1s;
-  cursor: pointer;
-  opacity: 0.9;
-}
-
-button:hover {
+input:focus{
+  transition: 0.3s ease;
   transform: scale(1.05);
-  opacity: 1;
+  outline-color: #00aeff;
 }
 
-li {
-  list-style: none;
+button{
+  border: 2px solid #00aeff;
+  border-radius: 20px;
+  width: 100px;
+  height: 25px;
+  background: white;
 }
 
-a {
-  text-decoration: none;
-  height: fit-content;
-  width: fit-content;
-  margin: 10px;
-}
-
-a:hover {
-  opacity: 1;
-  text-decoration: none;
-}
-
-.Hello {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 20px 0;
+button:hover{
+  cursor: pointer;
+  transition: 0.3s ease;
+  transform: scale(1.02);
+  border-top-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+  background-color: #00aeff;
+  color: white;
 }
