--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
 body{
+  user-select: none;
+  user-drag: none;
   margin: 0px;
   font-family:'Rubik', sans-serif;
   font-weight: 300;
@@ -27,4 +29,9 @@ button:hover{
   border-bottom-right-radius: 0px;
   background-color: #00aeff;
   color: white;
+}
+
+a{
+  text-decoration: none;
+  color: black;
 }
