--- a/src/renderer/components/Login.css
+++ b/src/renderer/components/Login.css
@@ -55,6 +55,8 @@
 }
 
 .LoginForm input{
+	text-align: center;
+	font-weight: bold;
 	border: 1px solid #00aeff;
 	border-radius: 25px;
 	height: 25px;
