--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -1,9 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
 body{
   user-select: none;
+
   margin: 0px;
   font-family:'Rubik', sans-serif;
   font-weight: 300;
+}
+
+img{
+  -webkit-user-drag: none;
 }
 
 input:focus{
